- OfferUVGOType (Changed)
    - removed max size restriction for voluntarilyInsuredPersons
    - replaced valid enum values for property "role" in "voluntarilyInsuredPersons"
    - renamed property "voluntarilyInsuredPersons" to "personMentionedByName"
    - removed property "personsConnectionEmployer"
    - added mandatory property "riskCharacteristic"
- PayInstalmentType (Changed)
    - capitalized enum value "anually"
- PayrollBasisType
    - capitalized enum value 'total wage'
- PayrollEmployeesType (Added)
- PensionSalaryType (Added)
- PensionBenefitPeriodType (Added)
- PreviousInsurerType
    - "insurerCode" is now mandatory
    - renamed "insuranceStartDate" to "beginningPreInsuranceDate"
    - renamed "insuranceEndDate" to "endPreInsuranceDate"
- RiskCharacteristicType (Added)
- SUVACompanyType (Added)
- UVGOCoverageType
    - replaced enum values
- UVGOFixedPayrollsType (Changed)
    - Renamed to UVGOPersonType
    - Added optional property "degreeOfEmployment"
    - Added mandatory property "insuranceType"
    - Removed property "coverage"
    - renamed property "premiumInsuredPerson" to "premiumPersonMentionedByName"
    - properties "hazardClass" and "hazardSubClass" in "premiumPersonMentionedByName" are now mandatory
- UVGOInsuranceOptionsVariousType (Changed)
    - Added "additionalOptions" property
    - property "annualCancellation" is now optional
- UVGOInsurerType (Removed)
- UVGOPersonGroupType (Changed)
    - Added property "personGroupDescription"
    - renamed property "numberOfPersonsBU" to "numberOfPersonsOA"
    - renamed property "numberOfPersonsNBU" to "numberOfPersonsNOA"
    - renamed property "payrollBU" to "payrollEmployeesOA"
    - renamed property "payrollNBU" to "payrollEmployeesNOA"
- UVGZCoverageType (Changed)
    - property "deathCapital" is now optional
    - property "disabilityCapital" is now optional
    - property "dailyAllowance" is now optional
    - property "dailyHospitalAllowance" is now optional