@@ -1,0 +1,7 @@
+{
+  "riskCharacteristic": "Anobag (employees without employers liable to pay contributions)",
+  "insuranceOptionsVarious": {
+    "typePayInstalment": "1/2 year",
+    "contractExtensionAfterExpiration": false
+  }
+}
